[package]
name = "yew-graphql-demo"
version = "0.1.0"
authors = ["sansx <xiathxth@gmail.com>"]
edition = "2018"

[dependencies]
yewtil = {version = "0.4", features = ["future"]}
wasm-bindgen = "0.2.74" # This is pinned primarily for CI stability.
wasm-bindgen-futures = "0.4"
yew = "0.18.0"
yew-router = "0.15.0"
graphql_client = "0.9.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
web-sys = "0.3.51"
dotenv = "0.15.0"

[features]
default = []
